# MoyanAgent

./: .gitignore  README.md  image_chat.html  index.html  package-lock.json  package.json  seedance.md  tmp_blanks_out.txt  tsconfig.json  写作提示词 copy.md  写作提示词.md  创建视频生成任务.md  文本音频生成提示词.md  网文提示词.md  豆包.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_session_system_prompt.sql  003_session_history_turns.sql  004_session_llm_params.sql  005_agent_events.sql  006_llm_catalog.sql  007_context_window.sql  008_deepseek_context_window.sql  009_projects.sql  010_project_params.sql  011_agent_chain.sql  012_custom_agent_tools.sql  013_role_states.sql  014_project_agent_chain.sql  015_image_capability.sql  016_file_snapshots.sql  017_token_usage_events.sql  018_file_snapshot_encoding.sql  019_token_event_content.sql  020_role_state_project_scope.sql  021_ark_video.sql  022_session_provider.sql
src-tauri/src/: db.rs  editor.rs  error.rs  images.rs  lib.rs  main.rs  openrouter.rs  paths.rs  session.rs  settings.rs
src-tauri/src/ai/: block_timeline.rs  chat.rs  mod.rs  parameters.rs  router.rs  stream_split.rs  tokens.rs
src-tauri/src/app/: clipboard.rs  mod.rs  project_fs.rs  project_rules.rs
src-tauri/src/data/: custom_agents.rs  db.rs  file_snapshot.rs  llm_catalog.rs  mod.rs  paths.rs  project.rs  role_state.rs  session.rs  settings.rs  token_log.rs  transfer.rs
src-tauri/src/media/: images.rs  mod.rs
src-tauri/windows/: English.nsh  SimpChinese.nsh  installer.nsi
(+310 files in other folders)
